fix: about us page, delivery section, svg divider dark mode issue resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
 * {
   /* border: orange solid 1px; */
   font-family: "Noto Sans KR", sans-serif;
+  word-break: keep-all;
 }
 
 body {
